# ticker-tape

./: .env.example  .gitattributes  .gitignore  LICENSE  README.md  ROADMAP.md  TODO.md  USER_GUIDE.md  analyze.py  app.py  app.tcss  app_actions.py  app_chat.py  app_chat_admin.py  app_dispatch.py  app_ibkr.py  app_ledger.py  app_market.py  app_prefs.py  app_timetravel.py  archive.py  backtest.py  backtest_data.py  backtest_fx.py  catalyst.py  chat.py  chat_tools.py  cli.py  config.py  data.py  db.py  decision_cards.py  demo_data.py  econ_calendar.py  event_feed.py  fill_notes.py  flex_import.py  formatters.py  i18n.py  ibkr_client.py  (+13 more)
data/demo/: alerts.json  catalysts.json  chat_history.json  memories.json  watchlist.json
docs/: backtest.md
docs/superpowers/plans/: 2026-04-18-analyze-command.md  demo-sweep-findings.md  (+4 more)
screens/: __init__.py  alerts.py  archive_screen.py  backtest.py  breakers.py  briefing.py  calendar_screen.py  carry.py  chart.py  chat_screen.py  cockpit.py  commodities.py  comparison.py  correlation.py  earnings.py  heatmap.py  help.py  ibkr_screen.py  impact.py  insider.py  intraday.py  lookup.py  market.py  news.py  options.py  screening.py  sectors.py  shadows.py  sizing.py  stock_detail.py  surprises.py  technicals.py  thesis.py  timeline.py  timetravel.py  valuation.py  watchlist_screen.py
screens/ibkr_screen/: __init__.py  _shared.py  account.py  consolidated.py  detail.py  margin_dashboard.py  positions.py  whatif.py
tests/: __init__.py  conftest.py  test_account_parsing.py  test_analyze.py  test_app.py  test_archive.py  test_archive_screen.py  test_backtest.py  test_backtest_correctness.py  test_backtest_data.py  test_backtest_fx.py  test_backtest_screen.py  test_breakers_screen.py  test_carry.py  test_catalyst.py  test_chat.py  test_chat_screen.py  test_chat_tools.py  test_cli.py  test_cockpit.py  test_column_widths.py  test_command_bar.py  test_commodities.py  test_data.py  test_data_fetch.py  test_decision_cards.py  test_demo.py  test_econ_calendar.py  test_event_feed.py  test_event_tape_app.py  test_exception_guard.py  test_fill_notes.py  test_flex_import.py  test_formatters.py  test_i18n.py  test_ibkr_client.py  test_journal.py  test_lookup.py  test_memory.py  test_memory_tags.py  (+18 more)
widgets/: __init__.py  command_bar.py  event_tape.py  sidebar.py  status_bar.py  ticker_tape.py
(+4 files in other folders)
